2023-08-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha03: Giggles';git push
	git tag -a 5.1.8-alpha03 -m 'ncks --chk_chr, --chk_mss';git push --tags

	* Refactor output of DIWG compliance checks to be more legible,	uniform for diwg_chk

	* Document --chk_chr, --chk_mss, --chk_nan

	* Add nco_chk_mss() to check for missing_value attributes

2023-08-18  Charlie Zender  <zender@uci.edu>

	* Add nco_chk_chr(), nm_cf_chk(), --chk_chr to check identifier	names for CF-Compliance (DIWG)

2023-08-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha02: Victoria Beach';git push
	git tag -a 5.1.8-alpha02 -m 'all: allow NC_STRING instead of NC_CHAR atts; ncremap: nfr mpas grd rdn';git push --tags

	* nco_grd_nfr() test MPAS coordinates without units attributes for being radians not degrees

2023-08-15  Charlie Zender  <zender@uci.edu>

	* Remove WARNING statements about NC_STRING not being supported/CF-compliant

2023-08-14  Charlie Zender  <zender@uci.edu>

	* Verify CF bounds attribute now handled correctly when stored as NC_STRING

	* Add nco_free_string() in support of NC_STRING support

2023-08-12  Charlie Zender  <zender@uci.edu>

	* nco_xtr_cf_var_add() nco_is_spc_in_cf_att(): update WARNING messages about NC_STRING attributes not being CF-compliant

2023-07-27  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha01: For All Mankind';git push
	git tag -a 5.1.8-alpha01 -m 'Functionally identical to 5.1.7';git push --tags

2023-07-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7: Barbenheimer';git push
	git tag -a 5.1.7 -m 'all: Intel compiler fixes;ncclimo/ncremap implement cmp_sng; ncremap: CF lon_bnds';git push --tags
