@@ -1,3 +1,9 @@
+2023-08-22  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.1.8-alpha04 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha04: Happy Valley';git push
+	git tag -a 5.1.8-alpha04 -m 'fxm';git push --tags
+
 2023-08-21  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.8-alpha03 release procedure:
